--- a/my-project/my-project-web/pom.xml
+++ b/my-project/my-project-web/pom.xml
@@ -215,11 +215,6 @@
             <version>1.1.1</version>
         </dependency>
         <dependency>
-            <groupId>org.jboss.ejb3</groupId>
-            <artifactId>jboss-ejb3-tutorial-extended-persistencecontext</artifactId>
-            <version>1.1.0</version>
-        </dependency>
-        <dependency>
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>9.0-801.jdbc4</version>
@@ -243,6 +238,30 @@
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
             <version>3.2.1</version>
+        </dependency>
+        <dependency>
+            <artifactId>hibernate</artifactId>
+            <groupId>org.hibernate</groupId>
+            <type>jar</type>
+            <version>3.1rc2</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jta</artifactId>
+                    <groupId>javax.transaction</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <artifactId>jta</artifactId>
+            <groupId>javax.transaction</groupId>
+            <type>jar</type>
+            <version>1.0.1B</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jta</artifactId>
+                    <groupId>javax.transaction</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>javaee</groupId>
