--- a/my-project/my-project-web/pom.xml
+++ b/my-project/my-project-web/pom.xml
@@ -85,6 +85,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
+                <version>2.3.2</version>
             </plugin>
         </plugins>
     </build>
@@ -212,7 +213,6 @@
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
-            <version>1.1.1</version>
         </dependency>
         <dependency>
             <groupId>postgresql</groupId>
@@ -255,13 +255,18 @@
             <artifactId>jta</artifactId>
             <groupId>javax.transaction</groupId>
             <type>jar</type>
-            <version>1.0.1B</version>
+            <version>1.1</version>
             <exclusions>
                 <exclusion>
                     <artifactId>jta</artifactId>
                     <groupId>javax.transaction</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.17</version>
         </dependency>
         <dependency>
             <groupId>javaee</groupId>
