--- a/my-project/my-project-web/pom.xml
+++ b/my-project/my-project-web/pom.xml
@@ -85,7 +85,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>2.1.1</version>
             </plugin>
         </plugins>
     </build>
@@ -267,6 +267,26 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.17</version>
+        </dependency>
+        <dependency>
+            <groupId>springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>1.2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>spring</groupId>
+            <artifactId>spring</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>springframework</groupId>
+            <artifactId>spring</artifactId>
+            <version>1.2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>springframework</groupId>
+            <artifactId>spring-full</artifactId>
+            <version>1.1-rc1</version>
         </dependency>
         <dependency>
             <groupId>javaee</groupId>
