--- a/my-project/my-project-web/src/main/resources/cfgFile.properties
+++ b/my-project/my-project-web/src/main/resources/cfgFile.properties
@@ -5,3 +5,13 @@ apiSecret=2370936af24a64fd
 ################-commercial-#################
 #apiKey=6bcbb5c7bbcde0df1c5f8683d157a3f3
 #apiSecret=7f79f6e5118f7f8f
+
+##############-top-api-location-#############
+identity_page_location=https://api.yotatop.ru
+payment_url=https://api.yotatop.ru
+identity_url=https://api.yotatop.ru
+
+##################-mapping-##################
+login_page=/demo/login
+main_view=main
+profile_view=profile
