--- a/my-project/my-project-web/src/main/resources/cfgFile.properties
+++ b/my-project/my-project-web/src/main/resources/cfgFile.properties
@@ -10,6 +10,7 @@ apiSecret=2370936af24a64fd
 identity_page_location=https://api.yotatop.ru
 payment_url=https://api.yotatop.ru
 identity_url=https://api.yotatop.ru
+subscriber_url=http://46.137.78.94
 
 ##################-mapping-##################
 login_page=/demo/login
