--- a/my-project/my-project-web/src/main/resources/cfgFile.properties
+++ b/my-project/my-project-web/src/main/resources/cfgFile.properties
@@ -11,6 +11,7 @@ identity_page_location=https://api.yotatop.ru
 payment_url=https://api.yotatop.ru
 identity_url=https://api.yotatop.ru
 subscriber_url=http://46.137.78.94
+qos_url=https://api.yotatop.ru
 
 ##################-mapping-##################
 login_page=/demo/login
