done with popups

--- a/my-project/my-project-web/src/main/resources/views.properties
+++ b/my-project/my-project-web/src/main/resources/views.properties
@@ -3,3 +3,6 @@ main.url=main
 
 profile.(class)=org.springframework.web.servlet.view.tiles2.TilesView
 profile.url=profile
+
+close_window.(class)=org.springframework.web.servlet.view.tiles2.TilesView
+close_window.url=close_window
