--- a/my-project/my-project-web/pom.xml
+++ b/my-project/my-project-web/pom.xml
@@ -103,6 +103,9 @@
         <dependency>
             <groupId>com.yota.top.sdk</groupId>
             <artifactId>top-sdk</artifactId>
+            <version>0.1-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/dist/lib/top-sdk-0.1-SNAPSHOT.jar</systemPath>
         </dependency>
        
     <!--
